# sagemaker-stable-diffusion-endpoint

./: .gitignore  README.md  infrastructure_considerations.md  pyproject.toml
devops/: README.md  app.py  cdk.json  pyproject.toml
devops/devops/: devops_stack.py
devops/tests/unit/: test_devops_stack.py
infrastructure/: Dockerfile.synth  README.md  cdk.json  deploy.sh  pyproject.toml  undeploy.sh
infrastructure/infrastructure/: Dockerfile.endpoint  app.py  complete.py  devops.py  endpoint.py  model_bucket.py  model_upload.py  param_store_endpoint_name.py  trigger_model_upload_lambda.py
infrastructure/tests/: test_app.py  test_devops.py  test_endpoint.py
src/: config.yaml  deploy.sh  deploy_async.py  endpoint.py  inference.py  safety_filter.py
src/create_hugging_face_secret/: pyproject.toml  upload_huggingface_token.py
src/create_hugging_face_secret/create_hugging_face_secret/: create_secret.py  test_create_secret.py
src/diffusion_endpoint/: Dockerfile.endpoint  pyproject.toml
src/diffusion_endpoint/diffusion_endpoint/: inference.py
src/diffusion_util/: pyproject.toml
src/diffusion_util/diffusion_util/: config.py  test_util.py  util.py
src/diffusion_util/tests/: test_util.py
src/endpoint/: Dockerfile  Dockerfile.endpoint  Dockerfile.model_upload  README.md  pyproject.toml
src/endpoint/diffusion_endpoint/: inference.py  server.py
src/endpoint/endpoint/: config.py  create_secret.py  inference.py  logger.py  param_store_endpoint_name.py  predict.py  server.py  upload_github_token.py  upload_model.py  util.py
src/endpoint/tests/: README.md  conftest.py  test_create_secret.py  test_docker.py  test_docker_build.py  test_docker_local.py  test_inference.py  test_integration.py  test_local_integration.py  test_logger.py  test_model_upload.py  test_predict.py  test_server.py  test_upload_model.py  test_util.py
src/endpoint_infrastructure/: app.py  pyproject.toml
src/endpoint_infrastructure/endpoint_infrastructure/: endpoint_infrastructure_stack.py
src/endpoint_infrastructure/tests/unit/: test_endpoint_infrastructure_stack.py
src/infrastructure/: app.py
src/infrastructure/infrastructure/: model_upload.py
src/model_save_stage/: create_secret.py  model_from_hub_to_s3.py  pyproject.toml  test_create_secret.py  test_model_from_hub_to_s3.py  test_util.py  upload_huggingface_token.py  util.py
src/model_upload/: Dockerfile  model_from_hub_to_s3.py  pyproject.toml  test_model_from_hub_to_s3.py
src/model_upload/model_upload/: test_model_upload.py  upload_model.py
src/predict/: README.md  pyproject.toml
src/predict/predict/: main.py  predict.py  util.py
src/predict/tests/: conftest.py  test_integration.py
src/sdk_endpoint/: endpoint.py  safety_filter.py
src/upload_model/: pyproject.toml
src/upload_model/tests/: test_upload_model.py
src/upload_model/upload_model/: create_secret.py  upload_model.py  util.py
src/util/: pyproject.toml  test_util.py
src/util/util/: param_store_endpoint_name.py  upload_github_token.py  util.py
