[tool.poetry]
name = "diffusion-endpoint"
version = "0.1.0"
description = "api sendpoint for diffusion model"
authors = ["Duncan Haywood"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
sagemaker = "^2.110.0"
diffusers = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
