[tool.poetry]
name = "create_hugging_face_secret"
version = "0.1.0"
description = ""
authors = ["Duncan"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
diffusion-util = {path = "../diffusion_util"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
