[tool.poetry]
name = "diffusion_util"
version = "0.3.0"
description = ""
authors = ["Duncan"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
boto3 = "^1.24.91"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
moto = "^4.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
