[tool.poetry]
name = "endpoint"
version = "0.1.0"
description = ""
authors = ["D Haywood"]

[tool.poetry.dependencies]
python = "^3.8"
sagemaker-inference = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
