[tool.poetry]
name = "endpoint"
version = "0.1.0"
description = ""
authors = ["D Haywood"]

[tool.poetry.dependencies]
python = "^3.8"
sagemaker-inference = "^1.8.0"
diffusers = "^0.5.1"
torch = "^1.12.1"
diffusion-util = {path = "../diffusion_util"}
multi-model-server = "^1.1.8"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Pillow = "^9.2.0"

[tool.pytest.ini_options]
addopts = "--disable-warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
