[tool.poetry]
name = "endpoint"
version = "1.0.2"
description = "Endpoint for stable diffusion endpoint"
authors = ["Duncan Haywood"]
license = "Prop"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.2"
Pillow = "^9.3.0"
diffusers = "^0.7.1"
torch = "^1.13.0"
transformers = "^4.24.0"
multi-model-server = "^1.1.8"
retrying = "^1.3.3"
sagemaker-inference = "^1.8.0"
typer = "^0.6.1"
sagemaker = "^2.116.0"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
moto = "^4.0.9"
typeguard = "^2.13.3"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
