[tool.poetry]
name = "model_save_stage"
version = "0.1.0"
description = ""
authors = ["Duncan"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.91"
typer = "^0.6.1"
PyYAML = "^6.0"
diffusers = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
