[tool.poetry]
name = "model_save_stage"
version = "0.1.0"
description = ""
authors = ["Duncan"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
diffusers = "^0.5.1"
torch = "^1.12.1"
transformers = "^4.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
moto = "^4.0.7"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
