[tool.poetry]
name = "predict"
version = "0.1.0"
description = "prediction function for calling endpoint"
authors = ["Duncan Haywood"]
license = "Prop"

[tool.poetry.dependencies]
python = "^3.8"
sagemaker = "^2.112.2"
diffusion-util = {path = "../diffusion_util"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
