[tool.poetry]
name = "util"
version = "0.1.0"
description = ""
authors = ["Duncan Haywood"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.36"
typer = "^0.7.0"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
